<?xml version="1.0"?>
<package format="2">
  <name>road_reflector_detector</name>
  <version>0.0.1</version>
  <description>ROS2 package for detecting road reflectors using LiDAR and camera</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ultralytics_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
